--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
                 <p><em>St. Gregory's High School, Dhaka, Bangladesh</em></p>
                 <p>
                   
-Back in school days participating in events for science fair particularly brought out the love for science. I spend one of my best parts here. This place builds me whatever I'm now.
+Back in school days participating in events for science fair particularly brought out the love for science. I spent one of the best parts here. This place built me whatever I'm now.
 
                 </p>
               </div>
@@ -682,13 +682,9 @@ Back in school days participating in events for science fair particularly brough
           ></a>
         </div>
 
-        <div class="copyright">My Portfolio &copy; 2021 | by Dhruba Datta</div>
+        <div class="copyright">MyPortfolio &copy; 2021 | by Dhruba Datta</div>
         <div class="credits">
-          <!-- All the links in the footer should remain intact. -->
-          <!-- You can delete the links only if you purchased the pro version. -->
-          <!-- Licensing information: [license-url] -->
-          <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/free-html-bootstrap-template-my-resume/ -->
-          <!-- Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> -->
+
         </div>
       </div>
     </footer>
