--- a/index.html
+++ b/index.html
@@ -486,7 +486,9 @@ Back in school days participating in events for science fair particularly brough
           <div class="section-title">
             <h2>Projects</h2>
             <p>
-              In this section, I’ll update all my works. Every project is defined into its sections. Till now I’ve worked on Web Development projects. Some Android projects will be added to the list very soon.
+             A project is a process of developing and creating through activities in a network that are aimed at a pre-defined goal. The target of projects is the transfer of static and dynamic content - both directly to users and indirectly through means of various kinds of interfaces. The goal is to make it easy with fun interactive ways.
+Recently I have worked on a web development project using HTML, CSS & Bootstrap passing as a night owl surfing sleeplessly just to get it done, this is how much it means to me. For far more I have decided to continue in this sector in the time ahead. Till now I have done some Web Development projects but ensuring to proceed in this direction there will be more in the very list as well as Android Developments too and so on.
+
             </p>
           </div>
 
