--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           I'm a
           <span
             class="typed"
-            data-typed-items="Software Engineering Student, Web Developer, Coder, Photographer"
+            data-typed-items="Software Engineering Student, Scholarship Holder, Web Developer, Coder, Photographer"
           ></span>
         </p>
         <div class="social-links">
