--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@ Back in school days participating in events for science fair particularly brough
           <div class="section-title">
             <h2>Projects</h2>
             <p>
-             A project is a process of developing and creating through activities in a network that are aimed at a pre-defined goal. Recently I have worked on a web development project using HTML, CSS & Bootstrap passing as a night owl surfing sleeplessly just to get it done, this is how much it means to me. For far more I have decided to continue in this sector in the time ahead. Till now I have done some Web Development projects but ensuring to proceed in this direction there will be more in the very list as well as Android Developments too and so on.
+             A project is a process of developing and creating through activities in a network that are aimed at a pre-defined goal. Recently I have worked on a web development project passing as a night owl surfing sleeplessly just to get it done, this is how much it means to me. For far more I have decided to continue in this sector in the time ahead. Till now I have done some Web Development projects but ensuring to proceed in this direction there will be more in the very list as well as Android Developments too and so on.
 
             </p>
           </div>
