--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
             <div class="col-lg-8 pt-4 pt-lg-0 content">
               <h3>Web Developer</h3> <hr>
               <p class="font-italic">
-                Hello! My name is Dhruba and currently I'm an undergraduate student at Delhi Technological University. I try to bring the vision of stunning digital experience into life. Back in my college days, entering into a new world of technology seized my interest hence I choose software engineering as my major for undergraduate study. As an amateur trying in leisure for photography and creating YouTube content took a change for novelty. <br>
+                Hello! My name is Dhruba and currently I'm an undergraduate student at Delhi Technological University. I try to bring the vision of stunning digital experience into life. Back in my college days, entering into a new world of technology seized my interest hence I choose software engineering as my major for undergraduate study. As an amateur trying in leisure for photography and creating YouTube content took a change for novelty. <br> <hr>
               </p>
               <div class="row">
                 <div class="col-lg-6">
