--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
           <div class="section-title">
             <h2>Facts</h2>
             <p>
-              Learning new things always fun if you enjoy it. As I had an interest in Web & Android Development, so I'm trying to figure out more about it. Besides I've started competitive Programming too. So here I'll track my activities as well as improve myself.
+              Learning new things always fun if you enjoy it. As I have an interest in Web & Android Development, so I'm trying to figure out more about it. Besides I've started competitive Programming too. So here I'll track my activities as well as improve myself.
             </p>
           </div>
 
