--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             ><i class="bx bxl-linkedin"></i
           ></a>
           <a
-            href="https://www.instagram.com/dhruba_datta_anjan/"
+            href="https://www.instagram.com/dhrubz_/"
             target="_blank"
             class="instagram"
             ><i class="bx bxl-instagram"></i
