--- a/index.html
+++ b/index.html
@@ -610,12 +610,12 @@ Back in school days participating in events for science fair particularly brough
                 </div>
                 <div class="text-center">
                   <a
-                    href="mailto:dhrubadattaanjan@gmail.com"
+                  href="mailto:dhrubadattaanjan@gmail.com"
                     target="_blank"
-                    class="btn btn-info"
+                    class="btn mail"
                     role="button"
                     aria-disabled="true"
-                    >Get In Touch</a
+                    ><span> Get In Touch</span> </a
                   >
                 </div>
               </div>
