--- a/index.html
+++ b/index.html
@@ -275,12 +275,12 @@
           <div class="row skills-content">
             <div class="col-lg-6">
               <div class="progress">
-                <span class="skill">HTML <i class="val">90%</i></span>
+                <span class="skill">HTML <i class="val">80%</i></span>
                 <div class="progress-bar-wrap">
                   <div
                     class="progress-bar"
                     role="progressbar"
-                    aria-valuenow="90"
+                    aria-valuenow="80"
                     aria-valuemin="0"
                     aria-valuemax="100"
                   ></div>
@@ -288,12 +288,12 @@
               </div>
 
               <div class="progress">
-                <span class="skill">CSS <i class="val">85%</i></span>
+                <span class="skill">CSS <i class="val">70%</i></span>
                 <div class="progress-bar-wrap">
                   <div
                     class="progress-bar"
                     role="progressbar"
-                    aria-valuenow="85"
+                    aria-valuenow="70"
                     aria-valuemin="0"
                     aria-valuemax="100"
                   ></div>
@@ -301,12 +301,12 @@
               </div>
 
               <div class="progress">
-                <span class="skill">JavaScript <i class="val">75%</i></span>
+                <span class="skill">JavaScript <i class="val">55%</i></span>
                 <div class="progress-bar-wrap">
                   <div
                     class="progress-bar"
                     role="progressbar"
-                    aria-valuenow="75"
+                    aria-valuenow="55"
                     aria-valuemin="0"
                     aria-valuemax="100"
                   ></div>
@@ -316,20 +316,7 @@
 
             <div class="col-lg-6">
               <div class="progress">
-                <span class="skill">C++ <i class="val">95%</i></span>
-                <div class="progress-bar-wrap">
-                  <div
-                    class="progress-bar"
-                    role="progressbar"
-                    aria-valuenow="95"
-                    aria-valuemin="0"
-                    aria-valuemax="100"
-                  ></div>
-                </div>
-              </div>
-
-              <div class="progress">
-                <span class="skill">Bootstrap <i class="val">90%</i></span>
+                <span class="skill">C|C++ <i class="val">90%</i></span>
                 <div class="progress-bar-wrap">
                   <div
                     class="progress-bar"
@@ -342,12 +329,25 @@
               </div>
 
               <div class="progress">
-                <span class="skill">Java <i class="val">55%</i></span>
+                <span class="skill">Bootstrap <i class="val">70%</i></span>
                 <div class="progress-bar-wrap">
                   <div
                     class="progress-bar"
                     role="progressbar"
-                    aria-valuenow="55"
+                    aria-valuenow="70"
+                    aria-valuemin="0"
+                    aria-valuemax="100"
+                  ></div>
+                </div>
+              </div>
+
+              <div class="progress">
+                <span class="skill">Java <i class="val">75%</i></span>
+                <div class="progress-bar-wrap">
+                  <div
+                    class="progress-bar"
+                    role="progressbar"
+                    aria-valuenow="75"
                     aria-valuemin="0"
                     aria-valuemax="100"
                   ></div>
