--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
             <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
               <div class="count-box">
                 <i class="icofont-simple-smile"></i>
-                <span data-toggle="counter-up">5</span>
+                <span data-toggle="counter-up">5+</span>
                 <p>Coding Languages</p>
               </div>
             </div>
