--- a/index.html
+++ b/index.html
@@ -365,10 +365,7 @@
           <div class="section-title">
             <h2>Resume</h2>
             <p>
-              <!-- Magnam dolores commodi suscipit. Necessitatibus eius consequatur
-              ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam
-              quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea.
-              Quia fugiat sit in iste officiis commodi quidem hic quas. -->
+             For my resume click here: <a href="https://drive.google.com/file/d/1gdQaSdothAmDErIT8fFnJ1Su6wkLwb_P/view" >My Resume</a>
             </p>
           </div>
 
