--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
           <div class="section-title">
             <h2>Resume</h2>
             <p>
-             For my resume click here: <a href="https://drive.google.com/file/d/1gdQaSdothAmDErIT8fFnJ1Su6wkLwb_P/view" target="_blank" >My Resume</a>
+             For my resume click here: <a href="https://drive.google.com/file/d/1gQYgqsEV0nqSEFXD_0ArO4MAJEz2jgKc/view?usp=sharing" target="_blank" >My Resume</a>
             </p>
           </div>
 
