--- a/index.html
+++ b/index.html
@@ -359,13 +359,13 @@
       </section>
       <!-- End Skills Section -->
 
-      <!-- ======= Resume Section ======= -->
+           <!-- ======= Resume Section ======= -->
       <section id="resume" class="resume">
         <div class="container" data-aos="fade-up">
           <div class="section-title">
             <h2>Resume</h2>
             <p>
-             For my resume click here: <a href="https://drive.google.com/file/d/1gQYgqsEV0nqSEFXD_0ArO4MAJEz2jgKc/view?usp=sharing" target="_blank" >My Resume</a>
+              For my resume click here: <a href="https://drive.google.com/file/d/1LaKd_TP4ER6XgEJ8eijbO7jbG1j9CajQ/view?usp=sharing" target="_blank">My Resume</a>
             </p>
           </div>
 
@@ -389,7 +389,7 @@
               <h3 class="resume-title">Education</h3>
               <div class="resume-item">
                 <h4>Bachelor of Technology (B.Tech)</h4>
-                <h5>2019 - Present</h5>
+                <h5>August 2019 - Present</h5>
                 <p><em>Delhi Technological University, New Delhi, India</em></p>
                 <p>
                   Currently, I am studying Software Engineering to enhance my knowledge. And presently studying in one of the great universities of India is challenging my problem-solving skills, extend the range and volume of my academic experience and developing my knowledge and potential for which I'm pretty much grateful.
@@ -397,7 +397,7 @@
               </div>
               <div class="resume-item">
                 <h4>Higher Secondary Certificate (HSC)</h4>
-                <h5>2016 - 2018</h5>
+                <h5>April 2016 - Auguast 2018</h5>
                 <p><em>Dhaka College, Dhaka, Bangladesh</em></p>
                 <p>
                   In college discovering a whole new space of multimedia and social platforms caught my gaze for technology and many more.
@@ -405,7 +405,7 @@
               </div>
               <div class="resume-item">
                 <h4>Secondary School Certificate (SSC)</h4>
-                <h5>2006 - 2016</h5>
+                <h5>January 2006 - March 2016</h5>
                 <p><em>St. Gregory's High School, Dhaka, Bangladesh</em></p>
                 <p>
                   
@@ -417,65 +417,73 @@ Back in school days participating in events for science fair particularly brough
             <div class="col-lg-6">
               <h3 class="resume-title">Experience</h3>
               <div class="resume-item">
-                <h4>Government Scholarship Holder</h4>
-                <h5>2019 - Present</h5>
+                <h4>Indian Council for Cultural Relations</h4>
+                <h5>August 2019 - Present</h5>
                 <p>
                   <em
-                    >Indian Council for Cultural Relations, New Delhi, India</em
+                    >New Delhi, India</em
                   >
                 </p>
                 <ul>
                   <li>
-                    ICCR provides administering scholarship programs of the Government of India annually. It's a full free scholarship that has been awarded to 3940 scholars every year. 
+                    Offering cost-free educational scholarships along with pretty generous stipends per month.
                   </li>
                   <li>
                     This opportunity truly means a lot for me to be a part of ICCR & getting to know the vast Indian culture.
                   </li>
                 </ul>
               </div>
+              <div class="resume-item">
+                <h4>Mentor</h4>
+                <h5>December 2018 - July 2019</h5>
+                <p>
+                  <em
+                    >Dhaka, Bangladesh</em
+                  >
+                </p>
+                <ul>
+                  <li>
+                    Meanwhile, I tutored 10th & 12th class students on various subjects encompassing Maths, Physics & ICT while applying abroad for higher studies.
+                  </li>
+                  <!-- <li>
+                    This opportunity truly means a lot for me to be a part of ICCR & getting to know the vast Indian culture.
+                  </li> -->
+                </ul>
+              </div>
 
-              <h3 class="resume-title">Skills & Tools</h3>
+              <h3 class="resume-title">Skills & Achievements</h3>
               <div class="resume-item">
                 <h4>Skills</h4>
                 <!-- <h5>2019 - Present</h5>
               <p><em>Experion, New York, NY </em></p> -->
                 <ul>
-                  <li>Teamwork</li>
-                  <li>Knowledge of SQL</li>
+                  <li>Frontend developer with knowledge of Backend</li>
+                  <li>Programming Languages: C++, C, HTML, CSS, JavaScript</li>
+                  <li>Tools: Bootstrap, NodeJS, MongoDB</li>
                   <li>Logical Thinking & Problem Solving</li>
                   <li>Interpersonal communication skills</li>
                   <li>Fluently speak 3 Languages: English, Bengali, Hindi</li>
                 </ul>
               </div>
               <div class="resume-item">
-                <h4>Tools</h4>
+                <h4>Achievements</h4>
                 <!-- <h5>2019 - Present</h5>
               <p><em>Experion, New York, NY </em></p> -->
                 <ul>
                   <!-- <li>Microsoft Office</li> -->
-                  <li>Visual Studio Code</li>
-                  <li>Bootstrap: As a tool of Frontend Development</li>
+                  <li>Government scholarship holder</li>
+                  <li>Certificate of excellence in 
+                    "DRMC National Science Festival" & "SGHS Inter School Science Festival"
+                    </li>
                 </ul>
               </div>
-              <div class="resume-item">
-                <h4>Languages</h4>
-                <!-- <h5>2017 - 2018</h5>
-              <p><em>Stepping Stone Advertising, New York, NY</em></p> -->
-                <ul>
-                  <li>C++ : For Compitative Programming</li>
-                  <li>Java : For Android Development</li>
-                  <li>
-                    Hyper Text Markup Language (HTML) : For Web Development
-                  </li>
-                  <li>Cascading Style Sheet (CSS) : For Web Development</li>
-                  <li>C Language : As a basic of Programming Language</li>
-                </ul>
-              </div>
+            
             </div>
           </div>
         </div>
       </section>
       <!-- End Resume Section -->
+
 
       <!-- ======= project Section ======= -->
       <section id="portfolio" class="portfolio section-bg">
