--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
           <div class="section-title">
             <h2>Resume</h2>
             <p>
-              For my resume click here: <a href="https://drive.google.com/file/d/1wcE29pSO8lBMJ3nVCofPz7fI6XEvMKPp/view?usp=sharing" target="_blank">My Resume</a>
+              To download my resume click here: <a href="https://drive.google.com/file/d/1wcE29pSO8lBMJ3nVCofPz7fI6XEvMKPp/view?usp=sharing" target="_blank">My Resume</a>
             </p>
           </div>
 
