--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
     <title>Dhruba Datta</title>
-    <meta content="" name="description" />
-    <meta content="" name="keywords" />
+    <meta content="An ordinary boy from Bangladesh, who is currently pursuing B.Tech in Software Engineering at Delhi Technological University(DTU)." name="description" />
+    <meta content="Dhruba, Dhruba Datta, Dhruba Datta Anjan, DhrubaDattaAnjan, dhruba_datta_anjan, dhruba-datta, dhruba_anjan, Anjan" name="keywords" />
 
     <!-- Favicons -->
     <link
