--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                     </li>
                     <li>
                       <i class="icofont-rounded-right"></i>
-                      <strong>Phone:</strong> +91 7044566978
+                      <strong>Phone:</strong> +91 70445*****
                     </li>
                     <li>
                       <i class="icofont-rounded-right"></i>
@@ -232,7 +232,7 @@
             <div class="col-lg-3 col-md-6">
               <div class="count-box">
                 <i class="icofont-live-support"></i>
-                <span data-toggle="counter-up">57</span>
+                <span data-toggle="counter-up">85+</span>
                 <p>Problem Solved</p>
               </div>
             </div>
@@ -256,7 +256,7 @@
             <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
               <div class="count-box">
                 <i class="icofont-users-alt-5"></i>
-                <span data-toggle="counter-up">0</span>
+                <span data-toggle="counter-up">10+</span>
                 <p>Coding Competiton</p>
               </div>
             </div>
@@ -381,7 +381,7 @@
                 </p>
                 <ul>
                   <li>From: Dhaka, Bangladesh</li>
-                  <li>Phone: +91 7044566978</li>
+                  <li>Phone: +91 70445*****</li>
                   <li>Email: dhrubadattaanjan@gmail.com</li>
                 </ul>
               </div>
