--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
             <div class="col-lg-3 col-md-6">
               <div class="count-box">
                 <i class="icofont-live-support"></i>
-                <span data-toggle="counter-up">85+</span>
+                <span data-toggle="counter-up">85</span>
                 <p>Problem Solved</p>
               </div>
             </div>
@@ -256,7 +256,7 @@
             <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
               <div class="count-box">
                 <i class="icofont-users-alt-5"></i>
-                <span data-toggle="counter-up">10+</span>
+                <span data-toggle="counter-up">10</span>
                 <p>Coding Competiton</p>
               </div>
             </div>
