--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@ Back in school days participating in events for science fair particularly brough
               <ul id="portfolio-flters">
                 <li data-filter="*" class="filter-active">All</li>
                 <li data-filter=".filter-web">Website</li>
-                <li data-filter=".filter-app">Application</li>
+                <li data-filter=".filter-app">Applications</li>
                 <li data-filter=".filter-card">Other</li>
               </ul>
             </div>
