Clean code & some small updates!

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <title>Dhruba Datta</title>
     <meta content="An ordinary boy from Bangladesh, who is currently pursuing B.Tech in Software Engineering at Delhi Technological University(DTU)." name="description" />
-    <meta content="Dhruba, Dhruba Datta, Dhruba Datta Anjan, DhrubaDattaAnjan, dhruba_datta_anjan, dhruba-datta, dhruba_anjan, Anjan" name="keywords" />
+    <meta content="Dhruba, Dhruba Datta, Dhruba Datta Anjan, DhrubaDattaAnjan, dhruba_datta_anjan, dhruba-datta, dhruba_anjan, Anjan, portfolio, personal website, website" name="keywords" />
 
     <!-- Favicons -->
     <link
@@ -27,6 +27,7 @@
       href="img/favicon_io/favicon-16x16.png"
     />
     <link rel="manifest" href="img/favicon_io/site.webmanifest" />
+    
     <!-- Google Fonts -->
     <link
       href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
@@ -93,7 +94,7 @@
           I'm a
           <span
             class="typed"
-            data-typed-items="Software Engineering Student, Scholarship Holder, Web Developer, Coder, Photographer"
+            data-typed-items="Software Engineering Student, Scholarship Holder, Web Developer, Competitive Coder, Photographer"
           ></span>
         </p>
         <div class="social-links">
@@ -138,12 +139,6 @@
         <div class="container" data-aos="fade-up">
           <div class="section-title">
             <h2>About</h2>
-            <p>
-              <!-- Magnam dolores commodi suscipit. Necessitatibus eius consequatur
-              ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam
-              quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea.
-              Quia fugiat sit in iste officiis commodi quidem hic quas. -->
-            </p>
           </div>
 
           <div class="row">
@@ -151,11 +146,11 @@
               <img
                 src="img/profile-img.jpg"
                 class="img-fluid rounded-circle"
-                alt=""
+                alt="dhruba datta"
               />
             </div>
             <div class="col-lg-8 pt-4 pt-lg-0 content">
-              <h3>Web Developer</h3> <hr>
+              <h3>Web Developer & Coder</h3> <hr>
               <p class="font-italic">
                 Hello! My name is Dhruba and currently I'm an undergraduate student at Delhi Technological University. I try to bring the vision of stunning digital experience into life. Back in my college days, entering into a new world of technology seized my interest hence I choose software engineering as my major for undergraduate study. As an amateur trying in leisure for photography and creating YouTube content took a change for novelty. <br> <hr>
               </p>
@@ -203,15 +198,6 @@
                   </ul>
                 </div>
               </div>
-              <!-- <p>
-                Officiis eligendi itaque labore et dolorum mollitia officiis
-                optio vero. Quisquam sunt adipisci omnis et ut. Nulla
-                accusantium dolor incidunt officia tempore. Et eius omnis.
-                Cupiditate ut dicta maxime officiis quidem quia. Sed et
-                consectetur qui quia repellendus itaque neque. Aliquid amet
-                quidem ut quaerat cupiditate. Ab et eum qui repellendus omnis
-                culpa magni laudantium dolores.
-              </p> -->
             </div>
           </div>
         </div>
@@ -232,7 +218,7 @@
             <div class="col-lg-3 col-md-6">
               <div class="count-box">
                 <i class="icofont-live-support"></i>
-                <span data-toggle="counter-up">85</span>
+                <span data-toggle="counter-up">105</span>
                 <p>Problem Solved</p>
               </div>
             </div>
@@ -329,7 +315,7 @@
               </div>
 
               <div class="progress">
-                <span class="skill">Bootstrap <i class="val">70%</i></span>
+                <span class="skill">DS & Algo <i class="val">70%</i></span>
                 <div class="progress-bar-wrap">
                   <div
                     class="progress-bar"
@@ -342,7 +328,7 @@
               </div>
 
               <div class="progress">
-                <span class="skill">Java <i class="val">75%</i></span>
+                <span class="skill">Bootstrap <i class="val">75%</i></span>
                 <div class="progress-bar-wrap">
                   <div
                     class="progress-bar"
@@ -364,9 +350,9 @@
         <div class="container" data-aos="fade-up">
           <div class="section-title">
             <h2>Resume</h2>
-            <p>
+            <!-- <p>
               To download my resume click here: <a href="https://drive.google.com/file/d/1wcE29pSO8lBMJ3nVCofPz7fI6XEvMKPp/view?usp=sharing" target="_blank">My Resume</a>
-            </p>
+            </p> -->
           </div>
 
           <div class="row">
@@ -408,9 +394,7 @@
                 <h5>January 2006 - March 2016</h5>
                 <p><em>St. Gregory's High School, Dhaka, Bangladesh</em></p>
                 <p>
-                  
-Back in school days participating in events for science fair particularly brought out the love for science. I spent one of the best parts here. This place built me whatever I'm now.
-
+                  Back in school days participating in events for science fair particularly brought out the love for science. I spent one of the best parts here. This place built me whatever I'm now.
                 </p>
               </div>
             </div>
@@ -454,8 +438,6 @@ Back in school days participating in events for science fair particularly brough
               <h3 class="resume-title">Skills & Achievements</h3>
               <div class="resume-item">
                 <h4>Skills</h4>
-                <!-- <h5>2019 - Present</h5>
-              <p><em>Experion, New York, NY </em></p> -->
                 <ul>
                   <li>Frontend developer with knowledge of Backend</li>
                   <li>Programming Languages: C++, C, HTML, CSS, JavaScript</li>
@@ -467,10 +449,7 @@ Back in school days participating in events for science fair particularly brough
               </div>
               <div class="resume-item">
                 <h4>Achievements</h4>
-                <!-- <h5>2019 - Present</h5>
-              <p><em>Experion, New York, NY </em></p> -->
                 <ul>
-                  <!-- <li>Microsoft Office</li> -->
                   <li>Government scholarship holder</li>
                   <li>Certificate of excellence in 
                     "DRMC National Science Festival" & "SGHS Inter School Science Festival"
@@ -564,7 +543,7 @@ Back in school days participating in events for science fair particularly brough
             <!-- Project3 App -->
             <div class="col-lg-4 col-md-6 portfolio-item filter-app">
               <div class="portfolio-wrap">
-                <img src="img/project/project30.png" class="img-fluid" alt="" />
+                <img src="img/project/project30.jpg" class="img-fluid" alt="" />
                 <div class="portfolio-info">
                   <h4>Android App</h4>
                   <p>Application</p>
