--- a/projects/project3.html
+++ b/projects/project3.html
@@ -64,7 +64,7 @@
               <h3 class="text-primary">Project information</h3>
               <ul>
                 <li><strong>Category</strong>: Application</li>
-                <li><strong>Project date</strong>: November, 2021</li>
+                <li><strong>Project date</strong>: Soon!</li>
                 <li>
                   <strong>GitHub Link</strong>:
                   <a
