Removed skill section

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
       <!-- End Facts Section -->
 
       <!-- ======= Skills Section ======= -->
-      <section id="skills" class="skills section-bg">
+      <!-- <section id="skills" class="skills section-bg">
         <div class="container" data-aos="fade-up">
           <div class="section-title">
             <h2>Skills</h2>
@@ -342,7 +342,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
       <!-- End Skills Section -->
 
            <!-- ======= Resume Section ======= -->
