--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
           <div class="section-title">
             <h2>Facts</h2>
             <p>
-              Learning new things always fun if you enjoy it. As I have an interest in Web & Android Development, so I'm trying to figure out more about it. Besides I've started Competitive Programming too. So here I'll track my activities as well as improve myself.
+              Learning new things always fun if you enjoy it. As I have an interest in Web Development, so I'm trying to figure out more about it. Besides I've started Competitive Programming too. So here I'll track my activities as well as improve myself.
             </p>
           </div>
 
@@ -471,7 +471,7 @@
             <h2>Projects</h2>
             <p>
              <!-- A project is a process of developing and creating through activities in a network that are aimed at a pre-defined goal. Recently I have worked on a web development project passing as a night owl surfing sleeplessly just to get it done, this is how much it means to me. For far more I have decided to continue in this sector in the time ahead. Till now I have done some Web Development projects but ensuring to proceed in this direction there will be more in the very list as well as Android Developments too and so on. -->
-             
+
 
             </p>
           </div>
