SEO description updated

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
     <title>Dhruba Datta | Portfolio</title>
-    <meta content="An ordinary boy from Bangladesh, who is currently pursuing B.Tech in Software Engineering at Delhi Technological University(DTU)." name="description" />
-    <meta content="Dhruba, Dhruba Datta, Dhruba Datta Anjan, DhrubaDattaAnjan, dhruba_datta_anjan, dhruba-datta, dhruba_anjan, Anjan, portfolio, personal website, website" name="keywords" />
+    <meta content="I'm Dhruba Datta from Dhaka, Bangladesh and currently pursuing B.Tech in Software Engineering at Delhi Technological University(DTU). You can check my portfolio to know more about me!" name="description" />
+    <meta content="Dhruba, Dhruba Datta, Dhruba Datta Anjan, DhrubaDattaAnjan, dhruba_datta_anjan, dhruba-datta, dhruba_anjan, Anjan, portfolio, personal website, website, dhaka, bangladesh, DTU, delhi, Delhi Technological University" name="keywords" />
 
     <!-- Favicons -->
     <link
