--- a/projects/project1.html
+++ b/projects/project1.html
@@ -70,9 +70,9 @@
     </section><!-- End Portfolio Details -->
 
   </main><!-- End #main -->
-
+<!-- 
   <a href="#" class="back-to-top"><i class="bx bx-up-arrow-alt"></i></a>
-  <div id="preloader"></div>
+  <div id="preloader"></div> -->
 
   <!-- Vendor JS Files -->
   <script src="../vendor/jquery/jquery.min.js"></script>
