--- a/index.html
+++ b/index.html
@@ -117,10 +117,10 @@
             ><i class="bx bxl-instagram"></i
           ></a>
           <a
-            href="https://www.facebook.com/dhruba.datta.anjan"
+            href="https://twitter.com/dhruba_anjan"
             target="_blank"
-            class="facebook"
-            ><i class="bx bxl-facebook"></i
+            class="twitter"
+            ><i class="bx bxl-twitter"></i
           ></a>
           <a
             href="https://www.youtube.com/DhrubaDattaAnjan"
@@ -218,7 +218,7 @@
             <div class="col-lg-3 col-md-6">
               <div class="count-box">
                 <i class="icofont-live-support"></i>
-                <span data-toggle="counter-up">105</span>
+                <span data-toggle="counter-up">172</span>
                 <p>Problem Solved</p>
               </div>
             </div>
@@ -242,7 +242,7 @@
             <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
               <div class="count-box">
                 <i class="icofont-users-alt-5"></i>
-                <span data-toggle="counter-up">10</span>
+                <span data-toggle="counter-up">18</span>
                 <p>Coding Competiton</p>
               </div>
             </div>
@@ -251,108 +251,11 @@
       </section>
       <!-- End Facts Section -->
 
-      <!-- ======= Skills Section ======= -->
-      <!-- <section id="skills" class="skills section-bg">
-        <div class="container" data-aos="fade-up">
-          <div class="section-title">
-            <h2>Skills</h2>
-          </div>
-
-          <div class="row skills-content">
-            <div class="col-lg-6">
-              <div class="progress">
-                <span class="skill">HTML <i class="val">80%</i></span>
-                <div class="progress-bar-wrap">
-                  <div
-                    class="progress-bar"
-                    role="progressbar"
-                    aria-valuenow="80"
-                    aria-valuemin="0"
-                    aria-valuemax="100"
-                  ></div>
-                </div>
-              </div>
-
-              <div class="progress">
-                <span class="skill">CSS <i class="val">70%</i></span>
-                <div class="progress-bar-wrap">
-                  <div
-                    class="progress-bar"
-                    role="progressbar"
-                    aria-valuenow="70"
-                    aria-valuemin="0"
-                    aria-valuemax="100"
-                  ></div>
-                </div>
-              </div>
-
-              <div class="progress">
-                <span class="skill">JavaScript <i class="val">55%</i></span>
-                <div class="progress-bar-wrap">
-                  <div
-                    class="progress-bar"
-                    role="progressbar"
-                    aria-valuenow="55"
-                    aria-valuemin="0"
-                    aria-valuemax="100"
-                  ></div>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-lg-6">
-              <div class="progress">
-                <span class="skill">C | C++ <i class="val">90%</i></span>
-                <div class="progress-bar-wrap">
-                  <div
-                    class="progress-bar"
-                    role="progressbar"
-                    aria-valuenow="90"
-                    aria-valuemin="0"
-                    aria-valuemax="100"
-                  ></div>
-                </div>
-              </div>
-
-              <div class="progress">
-                <span class="skill">DS & Algo <i class="val">70%</i></span>
-                <div class="progress-bar-wrap">
-                  <div
-                    class="progress-bar"
-                    role="progressbar"
-                    aria-valuenow="70"
-                    aria-valuemin="0"
-                    aria-valuemax="100"
-                  ></div>
-                </div>
-              </div>
-
-              <div class="progress">
-                <span class="skill">Bootstrap <i class="val">75%</i></span>
-                <div class="progress-bar-wrap">
-                  <div
-                    class="progress-bar"
-                    role="progressbar"
-                    aria-valuenow="75"
-                    aria-valuemin="0"
-                    aria-valuemax="100"
-                  ></div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section> -->
-      <!-- End Skills Section -->
-
-           <!-- ======= Resume Section ======= -->
+      <!-- ======= Resume Section ======= -->
       <section id="resume" class="resume">
         <div class="container" data-aos="fade-up">
           <div class="section-title">
             <h2>Resume</h2>
-            <!-- <p>
-              To download my resume click here: <a href="https://drive.google.com/file/d/1wcE29pSO8lBMJ3nVCofPz7fI6XEvMKPp/view?usp=sharing" target="_blank">My Resume</a>
-            </p> -->
           </div>
 
           <div class="row">
@@ -521,7 +424,6 @@
                   <h4>Food Order System</h4>
                   <p>C++ Project</p>
                   <div class="portfolio-links">
-                    <!-- <a href="img/portfolio/portfolio-4.jpg" data-gall="portfolioGallery" class="venobox" title="Card 2"><i class="bx bx-plus"></i></a> -->
                     <a
                       href="projects/project2.html"
                       data-gall="portfolioDetailsGallery"
@@ -623,7 +525,7 @@
             ><i class="bx bxl-facebook"></i
           ></a>
           <a
-            href="https://www.instagram.com/dhruba_datta_anjan/"
+            href="https://www.instagram.com/dhrubz_/"
             target="_blank"
             class="instagram"
             ><i class="bx bxl-instagram"></i
