--- a/index.html
+++ b/index.html
@@ -526,9 +526,9 @@
               <div class="portfolio-info">
                 <h4>My Profile Readme</h4>
                 <div class="portfolio-links">
-                  <a href="https://github.com/dhruba-datta/dhruba-datta"target="_blank"  data-gallery="portfolioGallery" class="portfolio-lightbox" title="GitHub Profile"><i class="bx bxl-github"></i></a>
+                  <a href="https://github.com/dhruba-datta"target="_blank"  data-gallery="portfolioGallery" class="portfolio-lightbox" title="GitHub Profile"><i class="bx bxl-github"></i></a>
                   
-                  <a href="https://github.com/dhruba-datta" target="_blank" class="portfolio-details-lightbox" data-glightbox="type: external" title="Repository Details"><i class="bx bx-link"></i></a>
+                  <a href="https://github.com/dhruba-datta/dhruba-datta" target="_blank" class="portfolio-details-lightbox" data-glightbox="type: external" title="Repository Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
