--- a/index.html
+++ b/index.html
@@ -640,7 +640,7 @@
 
     <!-- ======= Footer ======= -->
     <footer id="footer">
-      <h3>Dhruba Datta Anjan</h3> <br> 
+      <h3>Dhruba Datta</h3> <br> 
       <div class="container">
         <!-- <p>Reach me out on the these platforms</p> -->
         
