--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                 </img>
               </div>
               <h4><a href="">Web Development</a></h4>
-              <p>Learning to create frontend using HTML, CSS, JS and skilled in deploying backend also</p>
+              <p>Learning to create frontend using HTML, CSS, JS and skilled in deploying backend also.</p>
             </div>
           </div>
 
@@ -298,7 +298,7 @@
                 </img>
               </div>
               <h4><a href="">Data Structre & Algorithms</a></h4>
-              <p>Interview Preparation and developing competitive coding skills</p>
+              <p>Interview Preparation and developing competitive coding skills.</p>
             </div>
           </div>
 
@@ -310,7 +310,7 @@
               </img>
               </div>
               <h4><a href="">Database Management</a></h4>
-              <p>Relevant CSE coursework, learnt how to create databases using SQL</p>
+              <p>Relevant CSE coursework, learnt how to create databases using SQL.</p>
             </div>
           </div>
 
@@ -322,7 +322,7 @@
               </img>
               </div>
               <h4><a href="">Content Writing</a></h4>
-              <p>Write DSA related articles & solutions on Leetcode. Also scripts for my contents</p>
+              <p>Write DSA related articles & solutions on Leetcode. Also scripts for my contents.</p>
             </div>
           </div>
 
@@ -334,7 +334,7 @@
                 </img>
               </div>
               <h4><a href="">Photography</a></h4>
-              <p>Share my captures on Instagram. Experienced in Photoshop, Lightroom & Premier Pro</p>
+              <p>Share my captures on Instagram. Experienced in Photoshop, Lightroom & Premier Pro.</p>
             </div>
           </div>
 
@@ -346,7 +346,7 @@
                 </img>
               </div>
               <h4><a href="">Content Creation</a></h4>
-              <p>Found interest in Video Creation & Editing. Uploading weekly contents on YouTube</p>
+              <p>Found interest in Video Creation & Editing. Uploading regular on YouTube.</p>
             </div>
           </div>
 
