--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                 </img>
               </div>
               <h4><a href="">Web Development</a></h4>
-              <p>Learning to create frontend using HTML, CSS, JS and skilled in deploying backend also.</p>
+              <p>Learning to create frontend using HTML, CSS, JS and skilled in deploying backend.</p>
             </div>
           </div>
 
