--- a/index.html
+++ b/index.html
@@ -681,7 +681,7 @@
           <hr>
         </div>
 
-        <div class="copyright">MyPortfolio &copy; 2022 | by Dhruba Datta</div>
+        <div class="copyright">MyPortfolio &copy; 2022 | by <a href="https://bootstrapmade.com"target="_blank">BootstrapMade</a> </div>
         <div class="credits">
 
         </div>
