Color changed of project

--- a/index.html
+++ b/index.html
@@ -563,7 +563,7 @@
               <div class="portfolio-wrap">
                 <img src="img/project/project6.png" class="img-fluid" alt="" />
                 <div class="portfolio-info">
-                  <h4>Follow for more</h4>
+                  <h4>Follow me for future updates</h4>
                   <div class="portfolio-links">
                     <a href="https://www.instagram.com/dhrubz_/" target="_blank" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Instagram"><i class="bx bxl-instagram"></i></a> 
                     <a href="https://www.youtube.com/c/DhrubaDattaAnjan" target="_blank" class="portfolio-details-lightbox" data-glightbox="type: external" title="YouTube"><i class="bx bxl-youtube"></i></a>
