--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="48x48" href="img/favicon/favicon-48x48.png">
+
 <link rel="manifest" href="img/favicon/site.webmanifest">
 <link rel="mask-icon" href="img/favicon/safari-pinned-tab.svg" color="#5bbad5">
 <meta name="msapplication-TileColor" content="#da532c">
@@ -514,7 +516,7 @@
                 <div class="portfolio-links">
                   <a href="https://github.com/dhruba-datta/EasyCooking" target="_blank" data-gallery="portfolioGallery" class="portfolio-lightbox" title="GitHub Link"><i class="bx bxl-github"></i></a>
                   
-                  <a href="https://dhruba-datta.github.io/EasyCooking/" target="_blank" class="portfolio-details-lightbox" data-glightbox="type: external" title="Project viewport"><i class="bx bx-link"></i></a>
+                  <a href="https://dhruba-datta.github.io/EasyCooking/" target="_blank" class="portfolio-details-lightbox" data-glightbox="type: external" title="Project Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
