--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
     <link rel="icon" type="image/png" sizes="48x48" href="img/favicon/favicon-48x48.png">
     <link rel="icon" type="image/png" sizes="150x150" href="img/favicon/mstile-150x150.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="img/favicon/android-chrome-192x192.png">
-    <link rel="icon" type="image/png" sizes="512x512" href="img/favicon/android-chrome-512x512.png">
+    <link rel="android-chrome-192x192" sizes="192x192" href="img/favicon/android-chrome-192x192.png">
+    <link rel="android-chrome-512x512" sizes="512x512" href="img/favicon/android-chrome-512x512.png">
     <link rel="icon" type="image/x-icon" href="img/favicon/favicon.ico">
     
     <link rel="manifest" href="img/favicon/site.webmanifest">
