--- a/index.html
+++ b/index.html
@@ -9,18 +9,6 @@
     <meta content="Dhruba, Dhruba Datta, Dhruba Datta Anjan, DhrubaDattaAnjan, dhruba_datta_anjan, dhruba-datta, dhruba_anjan, Anjan, portfolio, personal website, website, dhaka, bangladesh, DTU, delhi, Delhi Technological University" name="keywords" />
 
     <!-- Favicons -->
-    <!-- 
-      <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
-      <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
-      <link rel="icon" type="image/png" sizes="48x48" href="img/favicon/favicon-48x48.png">
-    <link rel="icon" type="image/png" sizes="150x150" href="img/favicon/mstile-150x150.png">
-    <link rel="android-chrome-192x192" sizes="192x192" href="img/favicon/android-chrome-192x192.png">
-    <link rel="android-chrome-512x512" sizes="512x512" href="img/favicon/android-chrome-512x512.png">
-    <link rel="icon" type="image/x-icon" href="img/favicon/favicon.ico">
-    <link rel="manifest" href="img/favicon/site.webmanifest">
-    <link rel="mask-icon" href="img/favicon/safari-pinned-tab.svg" color="#5bbad5">
-    <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="theme-color" content="#ffffff"> -->
     <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
     <link rel="apple-touch-icon" sizes="57x57" href="img/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="img/favicon/apple-icon-60x60.png">
@@ -45,25 +33,7 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="img/favicon/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
-    <!-- <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="img/favicon_io/apple-touch-icon.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="img/favicon_io/favicon-32x32.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="img/favicon_io/favicon-16x16.png"
-    />
-    <link rel="manifest" href="img/favicon_io/site.webmanifest" />
-     -->
+
     <!-- Google Fonts -->
     <link
       href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
@@ -95,28 +65,12 @@
     <header id="header" class="d-flex flex-column justify-content-center">
       <nav class="nav-menu">
         <ul>
-          <li class="active">
-            <a href="#hero"><i class="bx bx-home"></i> <span>Home</span></a>
-          </li>
-          <li>
-            <a href="#about"><i class="bx bx-user"></i> <span>About</span></a>
-          </li>
-          <li><a href="#skill" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Skills</span></a></li>
-          <li>
-            <a href="#resume"
-              ><i class="bx bx-file-blank"></i> <span>Resume</span></a
-            >
-          </li>
-          <li>
-            <a href="#portfolio"
-              ><i class="bx bx-book-content"></i> <span>Projects</span></a
-            >
-          </li>
-          <li>
-            <a href="#contact"
-              ><i class="bx bx-envelope"></i> <span>Contact</span></a
-            >
-          </li>
+          <li class="active"><a href="#hero"><i class="bx bx-home"></i> <span>Home</span></a></li>
+          <li><a href="#about"><i class="bx bx-user"></i> <span>About</span></a></li>
+          <li><a href="#skill" class="nav-link scrollto"><i class="icofont-paper-plane"></i> <span>Skills</span></a></li>
+          <li><a href="#resume"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
+          <li><a href="#portfolio"><i class="bx bx-book-content"></i> <span>Projects</span></a></li>
+          <li><a href="#contact"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
         </ul>
       </nav>
       <!-- .nav-menu -->
@@ -263,7 +217,7 @@
           <div class="row">
             <div class="col-lg-3 col-md-6">
               <div class="count-box">
-                <i class="icofont-live-support"></i>
+                <i class="icofont-tick-boxed"></i>
                 <span data-toggle="counter-up">172</span>
                 <p>Problem Solved</p>
               </div>
@@ -271,7 +225,7 @@
 
             <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
               <div class="count-box">
-                <i class="icofont-document-folder"></i>
+                <i class="icofont-atom"></i>
                 <span data-toggle="counter-up">3</span>
                 <p>Total Projects</p>
               </div>
@@ -279,7 +233,7 @@
 
             <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
               <div class="count-box">
-                <i class="icofont-simple-smile"></i>
+                <i class="icofont-code-alt"></i>
                 <span data-toggle="counter-up">6</span>
                 <p>Coding Languages</p>
               </div>
@@ -718,7 +672,10 @@
     </footer>
     <!-- End Footer -->
 
-    <a href="#" class="back-to-top"><i class="bx bx-up-arrow-alt"></i></a>
+    <a href="#" class="back-to-top">
+      <i class="icofont-simple-up"></i>
+    </a>
+    
     <div id="preloader"></div>
 
     <!-- Vendor JS Files -->
