--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
     <title>Dhruba Datta | Portfolio</title>
-    <meta content="I'm Dhruba from Dhaka, currently pursuing B.Tech in Software Engineering at Delhi Technological University(DTU)." name="description" />
+    <meta content="I'm currently an undergraduate student at Delhi Technological University(DTU), pursuing B.Tech in Software Engineering." name="description" />
     <meta content="Dhruba, Dhruba Datta, Dhruba Datta Anjan, DhrubaDattaAnjan, dhruba_datta_anjan, dhruba-datta, dhruba_anjan, Anjan, portfolio, personal website, website, dhaka, bangladesh, DTU, delhi, Delhi Technological University" name="keywords" />
 
     <!-- Favicons -->
