project and fact updated

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
             <div class="col-lg-3 col-md-6">
               <div class="count-box">
                 <i class="icofont-tick-boxed"></i>
-                <span data-toggle="counter-up">172</span>
+                <span data-toggle="counter-up">241</span>
                 <p>Problem Solved</p>
               </div>
             </div>
@@ -221,7 +221,7 @@
             <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
               <div class="count-box">
                 <i class="icofont-atom"></i>
-                <span data-toggle="counter-up">3</span>
+                <span data-toggle="counter-up">8</span>
                 <p>Total Projects</p>
               </div>
             </div>
@@ -492,7 +492,7 @@
                 <div class="portfolio-links">
                   <a href="https://github.com/dhruba-datta/EasyCooking" target="_blank" data-gallery="portfolioGallery" class="portfolio-lightbox" title="GitHub Link"><i class="bx bxl-github"></i></a>
                   
-                  <a href="https://dhruba-datta.github.io/EasyCooking/" target="_blank" class="portfolio-details-lightbox" data-glightbox="type: external" title="Project Details"><i class="bx bx-link"></i></a>
+                  <a href="https://dhruba-datta.github.io/EasyCooking/" target="_blank" class="portfolio-details-lightbox" data-glightbox="type: external" title="View Website"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -529,7 +529,7 @@
             <div class="portfolio-wrap">
               <img src="img/project/project5.png" class="img-fluid" alt="" />
               <div class="portfolio-info">
-                <h4>University Project in C++</h4>
+                <h4>Academic Project in C++</h4>
                 <div class="portfolio-links">
                   <a href="https://github.com/dhruba-datta/FoodOrderingSystem" target="_blank" data-gallery="portfolioGallery" class="portfolio-lightbox" title="GitHub Link"><i class="bx bxl-github"></i></a>
                 </div>
