--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
               </div>
           </div>
           <!-- project 07 -->
-          <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-card"> 
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card"> 
             <div class="portfolio-wrap">
               <img src="img/project/project7.png" class="img-fluid" alt="" />
               <div class="portfolio-info">
@@ -561,7 +561,7 @@
                   </a> 
                   </div>
               </div>
-            </div> -->
+            </div>
         </div>
 
 
