--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
 
     <!-- Template Main CSS File -->
     <link href="index.css" rel="stylesheet" />
+
+    <meta name="google-site-verification" content="_UA5GaPcHAKs6l4HYDENA87elTsKKft272vV6o5nMQg" />
   </head>
 
   <body>
